Tue May 20 11:36:06 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (PRI[diouxX]VALUE): printf format for VALUE.

	* gc.c (assign_heap_slot): suppress a warning.

Tue May 20 03:42:43 2008  Koichi Sasada  <ko1@atdot.net>

	* eval.c, vm_insnhelper.c: fix cref in instance_eval
	  and cvar_base search protocol.

	* bootstraptest/test_knownbug.rb, test_eval.rb: move soleved test
	  and add new tests.

	* test/ruby/test_eval.rb: fix tests for spec.

Tue May 20 01:43:44 2008  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_knownbug.rb: fix a test.
	  "block_given?" returns true if "yield" can be used.

Tue May 20 01:07:19 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (assignable_gen): when "self = 1" was evalueted, unnecessary
	  error message was output, which might cause null pointer access.

Mon May 19 23:32:12 2008  Koichi Sasada  <ko1@atdot.net>

	* vm.c (invoke_block_from_c): fix call flow.

Mon May 19 23:19:35 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* regexec.c (slow_search): check the case when the length is 1.
	  The behavior of memcmp is undefined if the third argument is 0.

Mon May 19 21:07:48 2008  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (native_thread_apply_priority): 
	  fix argument range check.  [ruby-dev:33124]

Mon May 19 18:22:35 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/openssl/ossl_pkcs5.c (ossl_pkcs5_pbkdf2_hmac): Fix the type
	  of md; pointed out by Takahiro Kambe <taca at back-street.net>
	  in [ruby-dev:34748].

Mon May 19 17:23:55 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regparse.c (PINC): use optimized enclen() instead of
	  ONIGENC_MBC_ENC_LEN().

	* regparse.c (PFETCH): ditto.

	* regparse.c (PFETCH): small optimization.

	* regexec.c (slow_search): single byte encoding optimization.

	* regenc.h (enclen): avoid calling function when encoding's
	  min_len == max_len.

	* re.c (rb_reg_regsub): rb_enc_ascget() optimization for single
	  byte encoding.
